--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>goit-typescript-hw-02</title>    
   </head>
   <body>
-    <script type="module" src="./dist/baseTypes/7.js" defer></script>
+    <script type="module" src="./dist/generic/1.js" defer></script>
   </body>
 </html>
 
