--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <script type="module" src="./dist/generic/1.js" defer></script>
+    <script type="module" src="./dist/generic/2.js" defer></script>
+    <script type="module" src="./dist/generic/3.js" defer></script>
+    <script type="module" src="./dist/generic/4.js" defer></script>
+    <script type="module" src="./dist/generic/5.js" defer></script>
   </body>
 </html>
 
