--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:;base64,=" />
-    <title>goit-typescript-hw-02</title>    
+    <title>goit-typescript-hw-02</title>
   </head>
   <body>
-    <script type="module" src="./dist/generic/1.js" defer></script>
-    <script type="module" src="./dist/generic/2.js" defer></script>
-    <script type="module" src="./dist/generic/3.js" defer></script>
-    <script type="module" src="./dist/generic/4.js" defer></script>
-    <script type="module" src="./dist/generic/5.js" defer></script>
+    <h1>goit-typescript-hw-02</h1>
   </body>
 </html>
-
